# aoc

./: .gitignore  LICENSE
haskell/2015/day1/: LICENSE  day1.cabal
haskell/2015/day1/app/: Main.hs
haskell/2024/day1/: PROBLEM_DESCRIPTION  day1.cabal
haskell/2024/day1/app/: Main.hs
haskell/2024/day10/: PROBLEM_DESCRIPTION  day10.cabal
haskell/2024/day10/app/: Main.hs
haskell/2024/day11/: PROBLEM_DESCRIPTION  day11  day11.cabal
haskell/2024/day11/app/: Main.hs
haskell/2024/day12/: PROBLEM_DESCRIPTION  day12.cabal
haskell/2024/day12/app/: Main.hs
haskell/2024/day2/: PROBLEM_DESCRIPTION  day2.cabal
haskell/2024/day2/app/: Main.hs
haskell/2024/day3/: PROBLEM_DESCRIPTION  day3.cabal
haskell/2024/day3/app/: Main.hs
haskell/2024/day4/: LICENSE  PROBLEM_DESCRIPTION  day4.cabal
haskell/2024/day4/app/: Main.hs
haskell/2024/day5/: PROBLEM_DESCRIPTION  day5.cabal
haskell/2024/day5/app/: Main.hs
haskell/2024/day6/: PROBLEM_DESCRIPTION  cabal.project  day6.cabal
haskell/2024/day6/app/: Main.hs
haskell/2024/day7/: PROBLEM_DESCRIPTION  day7.cabal
haskell/2024/day7/app/: Main.hs
haskell/2024/day8/: PROBLEM_DESCRIPTION  day8.cabal  input.test
haskell/2024/day8/app/: Main.hs
haskell/2024/day9/: PROBLEM_DESCRIPTION  cabal.project  day9.cabal  input.small2
haskell/2024/day9/app/: Main.hs
rust/2018/day1/: Cargo.toml
rust/2018/day1/src/: main.rs
rust/2018/day2/: Cargo.toml
rust/2018/day2/src/: main.rs
rust/2018/day3/: Cargo.toml
rust/2018/day3/src/: main.rs
rust/2019/: Cargo.toml
rust/2019/src/: day1.rs  day2.rs  main.rs
rust/2020/day1/: Cargo.toml
rust/2020/day1/src/: main.rs  part1.rs  part2.rs
rust/2021/day1/src/: main.rs
rust/2021/day10/src/: main.rs
rust/2021/day11/: Cargo.toml
rust/2021/day11/src/: main.rs
rust/2021/day12/: Cargo.toml
rust/2021/day12/src/: main.rs
rust/2021/day13/: Cargo.toml
rust/2021/day13/src/: main.rs
rust/2021/day14/: Cargo.toml  input-small2
rust/2021/day14/src/: main.rs
rust/2021/day15/: Cargo.toml
rust/2021/day15/src/: main.rs
rust/2021/day2/src/: main.rs
rust/2021/day3/: Cargo.toml
rust/2021/day3/src/: main.rs
rust/2021/day4/: Cargo.toml
rust/2021/day4/src/: main.rs
rust/2021/day5/: Cargo.toml
rust/2021/day5/src/: main.rs
rust/2021/day6/: Cargo.toml
rust/2021/day6/src/: main.rs
rust/2021/day7/: Cargo.toml
rust/2021/day7/src/: main.rs
rust/2021/day8/: Cargo.toml
rust/2021/day8/src/: main.rs
rust/2021/day9/: Cargo.toml
rust/2021/day9/src/: main.rs
