cabal-version:   3.12
name:            day10
version:         0.1.0.0
license:         NONE
author:          Shawn Badger
maintainer:      shawnbadger@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable day10
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1,
                      vector
    hs-source-dirs:   app
    default-language: Haskell2010
