cabal-version:   3.0
name:            day2
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          Shawn Badger
maintainer:      shawnbadger@gmail.com
category:        Game
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable day2
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.19.1.0,
                      split
    hs-source-dirs:   app
    default-language: Haskell2010
