cabal-version:   3.0
name:            day3
version:         0.1.0.0
license:         NONE
author:          Shawn Badger
maintainer:      shawnbadger@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable day3
    import:           warnings
    main-is:          Main.hs
    build-depends:    base,
                      regex-tdfa,
                      text
    hs-source-dirs:   app
    default-language: Haskell2010
