cabal-version:   3.0
name:            day4
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
author:          Shawn Badger
maintainer:      shawnbadger@gmail.com
category:        Game
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable day4
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   app
    default-language: Haskell2010
